# tender_platform

./: Dockerfile  README.md  docker-compose.yaml  env_sample  pyproject.toml  wait_for_db.sh
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
nginx/: default.conf  nginx.conf
tender/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
tender/migrations/: 0001_initial.py  0002_initial.py  0003_alter_orderproduct_order_alter_orderproduct_product.py  0003_alter_product_article_alter_product_name.py  0004_alter_answeronorder_delivery_time_and_more.py  0004_product_measurement.py  0005_alter_orderproduct_amounts.py  0005_remove_order_product.py  0006_alter_orderproduct_amounts.py  0006_order_product.py  0007_alter_answeronorder_delivery_time_and_more.py  0007_alter_product_article.py  0008_order_description_order_number_erp.py  0009_order_duration_order_is_active.py  0010_alter_order_duration.py  0011_alter_answeronorder_price.py
tender/templates/tender/: answer_on_order.html  answeronorder_list.html  base.html  no_answers.html  order_detail.html  order_form.html  order_list.html  order_update_form.html  orderproduct_detail.html  orderproduct_list.html  price_analysis.html  product_form.html  product_list.html  product_order_form.html  questions_for_product.html  update_answers.html  update_answers_success.html
tender/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: authorization.html  main.html  (+1 more)
